# pam_oidc_agent

./: COPYING  Makefile.am  README.md  configure.ac
src/: Makefile.am  pam_oidc_agent.c
